--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.pdf {
+  width: 500px;
+  height: 500px;
+  display: table;
+  margin: 0 auto;
+  padding: 20px 50px;
+  color: black;
+}
+
 @media (max-width: 600px) {
   .pl10 {
     padding-left: 8% !important;
