Se corrigen errores esteticos y se ordena el codigo

--- a/src/App.css
+++ b/src/App.css
@@ -19,19 +19,26 @@
   }
 }
 
+@media (max-width: 544px) {
+  .t-header {
+    font-size: 30px !important;
+    margin-top: 12px !important;
+    margin-left: 14px !important;
+  }
+}
+
+.t-header {
+  font-style: oblique;
+}
+
+@media (min-width: 992px) {
+  .App-header .row.mb-4 {
+    margin-left: -3%;
+  }
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
